public/acm/AlaatvCustomFiles/css/fixThemeStyle.css
/*fix them style*/
.m-portlet.m-portlet--head-overlay .m-portlet__body {
    margin-top: auto;
}

.m-portlet.m-portlet--head-overlay > .m-portlet__body {
    margin-top: -5.1rem;
}
.dropdown-menu > li > a {
    cursor: pointer;
}

.m-body .m-content {
    padding: 10px 30px 30px 30px;
}

/*missed css*/
.m-widget4__item.m-widget4__item--last, .m-widget4__item:last-child {
    border-bottom: 0;
}

/*fix IRANSans font for select input*/
.form-control {
    font-family: IRANSans;
    font-size: 11px;
}
select.form-control {
    padding: 10px 16px;
}

/*fix swithch*/
.bootstrap-switch {
    line-height: 6px;
}

/*fix rtl*/
.m-checkbox > span:after {
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg);
}
.alert[data-notify] .close {
    right: auto !important;
}

.m-scrollable {
    max-width: 100%;
}

.alert.m-alert--icon.m-alert--outline.m-alert--icon-solid .m-alert__icon span {
    border: 0;
    border-right: 6px solid #000;
    border-top: 6px solid transparent;
    border-bottom: 6px solid transparent;
}
.alert.m-alert--outline.alert-warning.m-alert--icon-solid .m-alert__icon span {
    border-right-color: #ffb822;
}
.alert.m-alert--outline.alert-info.m-alert--icon-solid .m-alert__icon span {
    border-right-color: #36a3f7;
}
.m-invoice-1 .m-invoice__wrapper .m-invoice__head .m-invoice__container .m-invoice__desc {
    text-align: right;
}

.m-topbar .m-topbar__nav.m-nav > .m-nav__item > .m-nav__link .m-topbar__userpic img {
    width: 41px;
    height: 41px;
}

.m-list-badge .m-list-badge__label {
    white-space: nowrap;
}

.m-header--fixed-mobile .m-topbar {
    top: -60px;
}

.m-portlet.m-portlet--skin-dark .m-portlet__body .table {
    color: #fff;
}

.m-badge.m-badge--info a {
    color: white;
}

.form-control {
    height: calc(1.25em + 1.7rem + 4px);
}

.m-timeline-3 .m-timeline-3__item .m-timeline-3__item-time {
    padding-top: 0;
}

.m-portlet.m-portlet--fullscreen {
    position: fixed;
    z-index: 120;
}

/*fix persian date picker show bug in modal*/
.datepicker-plot-area {
    z-index: 1061;
}


.note-toolbar {
    z-index: 90 !important;
}

.m-badge.a-badge--square {
    border-radius: 0;
}
.m-header-menu .m-menu__nav > .m-menu__item .m-menu__submenu {
    width: 285px;
}

.btn.dropdown-toggle::after, .nav-link.dropdown-toggle::after {
    content: "";
}
.note-editor.note-frame.panel {
    direction: ltr;
}
.note-editor .note-editable {
    padding-top: 25px;
}

#m_aside_left {
    overflow: auto;
}

.m-badge * {
    font-size: .8rem;
    cursor: pointer;
}

.btn-group.m-btn-group--pill:not(.btn-group-vertical) .btn:only-child {
    border-radius: 60px;
}

/*media query*/
@media only screen and (max-width: 767.98px) {
    .m-body .m-content {
        /*padding: 10px 20px 30px 20px;*/
        padding: 10px 5px 30px 5px;
    }

    .row {
        margin-left: -5px;
        margin-right: -5px;
    }

    .certificates-row {
        margin-left: -5px !important;
        margin-right: -5px !important;
    }
    .col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
        padding-left: 5px;
        padding-right: 5px;
    }
    .m-portlet__body {
        padding: 5px !important;
    }
}

@media only screen and (max-width: 1250px) {
    /*.m-header-menu .m-menu__nav > .m-menu__item {*/
    /*    padding-left: 3px;*/
    /*    padding-right: 3px;*/
    /*}*/
    .m-topbar .m-topbar__nav.m-nav > .m-nav__item {
        padding: 0 3px;
    }
}

@media only screen and (max-width: 1128px) {
    /*.m-header-menu .m-menu__nav > .m-menu__item {*/
    /*    padding-left: 0;*/
    /*    padding-right: 0;*/
    /*}*/
    .m-topbar .m-topbar__nav.m-nav > .m-nav__item {
        padding: 0;
    }
}

@media only screen and (max-width: 1024px) {
    .m-header-menu .m-menu__nav > .m-menu__item .m-menu__submenu > .m-menu__subnav > .m-menu__item {
        background: transparent;
    }
}

